# artificial_pancreas

./: README.md
SourceCode/C++_version/NMPC_multiple_C++/: CMakeLists.txt  HovorkaModel.cpp  explicitRK4.h  main.cpp
SourceCode/C++_version/NMPC_single_C++/: CMakeLists.txt  HovorkaModel.h  MVPmodel.cpp  MVPmodel.h  explicitRK4.h  functionUsed.cpp
SourceCode/Matlab_version/LMPC/LMPC_multiple/: CasADiInit_LMPC_multiple.m  ClosedLoopSimulation_LMPC_multiple.m  HovorkaModelSteadyState_multiple.m  KF_multiple.m  MVPModely2x_multiple.m  MVPOutputJacobian_single.m  ParamEstimateMLE.m
SourceCode/Matlab_version/LMPC/LMPC_single/: CasADiCompute_LMPC_single.m  CasADiInit_LMPC_single.m  ClosedLoopSimulation_LMPC_single.m  DriverAP_LMPC_single.m  HovorkaModel_single.m  HovorkaModely2x_single.m  KF_single.m  MVPModelSteadyState_single.m  MVPStateJacobian_single.m  c2dzoh.m  objfunMLE.m
SourceCode/Matlab_version/NMPC/NMPC_multiple/: CDEKFPredict_multiple.m  ClosedLoopSimulation_NMPC_multiple.m  EulerMaruyama_EKF_predict_single.m  HovorkaModel_multiple.m  MVPModelSteadyState_single.m  MVPModely2x_single.m  PlotAP_multiple.m  RK4_EKF_predict_multiple.m  ScalarStdWienerProcess.m
SourceCode/Matlab_version/NMPC/NMPC_single/: CasADiInit_NMPC_single.m  ClosedLoopSimulation_NMPC_single.m  HovorkaModelSteadyState_single.m  ParamEstimate_dataset.m  sensorNoise.m
source_code/: README.md
source_code/C++_version/NMPC_multiple_C++/: CMakeLists.txt  CasADiSolver.cpp  CasADiSolver.h  HovorkaModel.h  MVPmodel.cpp  MVPmodel.h  explicitRK4.cpp  functionUsed.h
source_code/C++_version/NMPC_single_C++/: CasADiSolver.cpp  CasADiSolver.h  HovorkaModel.cpp  explicitRK4.cpp  main.cpp
source_code/Matlab_version/LMPC/LMPC_multiple/: CDEKFPredict_single_noDiffusion.m  (+6 more)
(+20 files in other folders)
